fix change language item

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -17,5 +17,6 @@
    "english":"الانجليزية",
    "arabic": "العربية",
    "edit": "تعديل",
-   "general": "عام"
+   "general": "عام",
+   "language": "اللغات"
 }
