--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -17,5 +17,6 @@
    "english":"English",
    "arabic": "Arabic",
    "edit": "Edit",
-   "general": "General"
+   "general": "General",
+   "language": "Languages"
 }
