--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -18,5 +18,9 @@
    "arabic": "Arabic",
    "edit": "Edit",
    "general": "General",
-   "language": "Languages"
+   "language": "Languages",
+   "delete": "Delete",
+   "delete_dialog": "Are you shure you want to delete this note?",
+   "contine": "Continue",
+   "cancle": "Cancel"
 }
